--- a/src/newstyles/hub/chatForm/ChatFormHeader.css
+++ b/src/newstyles/hub/chatForm/ChatFormHeader.css
@@ -27,8 +27,6 @@
   cursor: pointer;
 }
 .content__name {
-  height: calc(44px * var(--base-scale));
-
   font-weight: 500;
   font-size: var(--font-h2);
   color: var(--color-black);
