--- a/src/newstyles/hub/elements/ChatMessage.css
+++ b/src/newstyles/hub/elements/ChatMessage.css
@@ -61,7 +61,6 @@
   max-width: 100%;
 
   color: var(--color-black);
-  line-height: var(--font-h5);
 
   inline-size: auto;
   overflow-wrap: break-word;
